# CS467-advanced-graphics

./: #lightlab.c#  &  .gitignore  D3d_matrixS.c  a.out  clipping_extras.txt
light_shapes/: .#D3d_matrixS.c  .#lighty_boi.c  .#tetra_movie.c  3d_clip.c  CMakeLists.txt  D3d_matrix.h  D3d_matrixS.c  a.out  backface_elimination.c  lighting.c  lighty_boi.c  lit_yellow_sphere.c  parametric_descriptions.h  play  scene01a_nu01.c  scene01a_nu03.c  scene_kid.c  scene_kid_done.c  sphere_kid.c  tetra_movie.c  tube_movie.c  xwd_no_graphics_window_example.c
light_shapes/movie/: tube_movie0001.xwd  tube_movie0002.xwd  tube_movie0003.xwd  tube_movie0004.xwd  tube_movie0005.xwd  tube_movie0006.xwd  tube_movie0007.xwd  tube_movie0008.xwd  tube_movie0009.xwd  tube_movie0010.xwd  tube_movie0011.xwd  tube_movie0012.xwd  tube_movie0013.xwd  tube_movie0014.xwd  tube_movie0015.xwd  tube_movie0016.xwd  tube_movie0017.xwd  tube_movie0018.xwd  tube_movie0019.xwd  tube_movie0020.xwd  tube_movie0021.xwd  tube_movie0022.xwd  tube_movie0023.xwd  tube_movie0024.xwd  tube_movie0025.xwd  tube_movie0026.xwd  tube_movie0027.xwd  tube_movie0028.xwd  tube_movie0029.xwd  tube_movie0030.xwd  tube_movie0031.xwd  tube_movie0032.xwd  tube_movie0033.xwd  tube_movie0034.xwd  tube_movie0035.xwd  tube_movie0036.xwd  tube_movie0037.xwd  tube_movie0038.xwd  tube_movie0039.xwd  tube_movie0040.xwd  (+60 more)
polyhedral_descriptions/: test1.xyz  test_make5.xyz  test_make6.xyz  test_make8.xyz
ray_tracing/: .#2d_intersections.c  2d_intersections.c  2d_vectors_intersections.c  3d_ray_tracing.c  parametric_descriptions.c  (+3 more)
(+5 files in other folders)
